first version of dynamic compatibility results
